--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1009,27 +1009,6 @@ body {
   height: 50px; 
 }
 
-/* .class-card .progress-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: var(--ff-catamaran);
-  color: var(--pink);
-  font-size: var(--fs-6);
-  font-weight: var(--fw-800);
-  
-  
-  & img {
-    width: 100px;
-    height: 100px;
-    margin: 0 auto; 
-  }
-
-  & a {
-    font-size: 25px;
-    padding: 5px; 
-  }
-} */
 
 /*-----------------------------------*\ */
   #BLOG
@@ -1358,6 +1337,42 @@ body {
   opacity: 1;
   transform: translateY(-10px);
 }
+
+.language-switcher {
+    /* Style for the container */
+    font-size: 0.9em;
+    padding: 5px;
+    display: flex; /* Or inline-flex, block, depending on your layout */
+    align-items: center;
+    gap: 5px; /* Spacing between elements */
+    margin-left: auto; /* Push it to the right if in a header */
+}
+
+/* language-switcher */
+.language-switcher .lang-link {
+    color: #ffffff; /* Default link color */
+    text-decoration: none;
+    font-weight: bold;
+    padding: 3px 5px;
+    border-radius: 3px;
+    transition: background-color 0.2s ease;
+}
+
+.language-switcher .lang-link:hover {
+    background-color: #7A9649;
+}
+
+.language-switcher .lang-link.active {
+    font-weight: bold;
+    color: #ffffff ; 
+    background-color: #7A9649;
+    border-radius: 5px;
+} 
+
+.language-switcher .lang-separator {
+    color: #ffffff;
+}
+
 
 /*-----------------------------------*\
   #MEDIA QUERIES
